# codestral_ros2_gen

./: .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: commits_check.yml
_modules/: index.html
_modules/codestral_ros2_gen/generators/: base_generator.html  generation_attempt.html
_modules/codestral_ros2_gen/models/: mistral_client.html
_modules/codestral_ros2_gen/network_scan/: network_host.html  network_parser.html  network_scanner.html  scan_operation.html
_modules/codestral_ros2_gen/utils/: code_parser.html  config_utils.html  file_io.html  metrics_handler.html  ros2_runner.html
_sources/: index.rst.txt
_sources/models/: mistral_client.rst.txt
_sources/network_scan/: scan_operation.rst.txt
_sources/utils/: file_io.rst.txt  metrics_handler.rst.txt  ros2_runner.rst.txt
config/: config.yaml  logger_config.yaml
docs/: Example_network_scanner_node.md  Example_object_height_service.md
docs/html/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html
docs/html/_modules/codestral_ros2_gen/generators/: base_generator.html  generation_attempt.html
docs/html/_modules/codestral_ros2_gen/models/: mistral_client.html
docs/html/_modules/codestral_ros2_gen/utils/: file_io.html  ros2_runner.html
docs/html/_sources/: index.rst.txt
docs/html/_sources/generators/: base_generator.rst.txt  generation_attempt.rst.txt
docs/html/_sources/utils/: code_parser.rst.txt  config_utils.rst.txt
docs/html/generators/: generation_attempt.html
docs/html/models/: mistral_client.html
docs/html/utils/: code_parser.html  config_utils.html  ros2_runner.html
docs/source/: conf.py  index.rst
docs/source/generators/: base_generator.rst  generation_attempt.rst
docs/source/network_scan/: network_host.rst  network_parser.rst  network_scanner.rst  utils.rst
docs/source/network_scanner/: network_host.rst  network_parser.rst  network_scanner.rst  scan_operation.rst  utils.rst
examples/network_scanner/: CMakeLists.txt  config.yaml  generator.py  package.xml
examples/network_scanner/msg/: IPStatus.msg  NetworkStatus.msg
examples/network_scanner/network_scanner/: network_scanner_node.py  scanner_node.py
examples/network_scanner/test/: test_scanner_node.py
examples/object_height/: CMakeLists.txt  config.yaml  generator.py  package.xml
examples/object_height/launch/: service.launch.py
examples/object_height/object_height/: service_node.py
examples/object_height/src/object_height/: __init__.py
examples/object_height_service/object_height/srv/: ObjectHeight.srv
examples/object_height_service/object_height/test/: test_service_node.py
generators/: base_generator.html  generation_attempt.html
html/: genindex.html  searchindex.js
html/generators/: base_generator.html
html/utils/: file_io.html  metrics_handler.html
models/: mistral_client.html
network_scan/: network_host.html  network_parser.html  network_scanner.html  scan_operation.html
research/: ollama_func_gen.py
research/metrics_analysis/network_scanner/: generation.txt  network_scanner_metrics.jsonl  nscan_results_analysis.ipynb
research/mistral_pg/: test_api.py  test_codestral_chat.py  test_file_analysis.py  test_gen_service.py
research/pinger_pg/: basic_ping.py  echo_network_status.sh  network_scan.py  network_scanner_test.py  scan_operation_test.py  test_pub.sh
research/playground/: logger_working.py
research/playground/gen_attempt/: gen_attempt_basic.ipynb
research/playground/metrics_analysis/: get_report_object_height.ipynb
scripts/: build_docs.sh  setup_pkg.sh
src/codestral_ros2_gen/: __init__.py
src/codestral_ros2_gen/generators/: base_generator.py  generation_attempt.py
src/codestral_ros2_gen/metrics/: metrics_handler.py
src/codestral_ros2_gen/models/: mistral_client.py
src/codestral_ros2_gen/network_scan/: __init__.py  network_host.py  network_parser.py  network_scanner.py  nscan.py  scan_operation.py  utils.py
src/codestral_ros2_gen/network_scanner/: network_host.py  network_parser.py  network_scanner.py  scan_operation.py
src/codestral_ros2_gen/utils/: code_parser.py  config_utils.py  file_io.py  init_pkg_logger.py  metrics_handler.py  ros2_runner.py  test_runner.py
tests/: conftest.py  test_init.py
tests/data/: sample_config.yaml  sample_metrics.jsonl
tests/generators/: test_base_generator.py  test_generation_attempt.py
tests/metrics/: test_metrics_handler.py
tests/models/: test_mistral_client.py
tests/network_scan/: test_network_host.py  test_network_parser.py  test_network_scanner.py  test_nscan.py  test_scan_operation.py
tests/network_scanner/: test_network_host.py  test_scan_operation.py
tests/utils/: test_code_parser.py  test_config_utils.py  test_file_io.py  test_init_pkg_logger.py  test_metrics_handler.py  test_ros2_runner.py
utils/: code_parser.html  config_utils.html  metrics_handler.html  ros2_runner.html
