[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codestral_ros2_gen"
version = "0.1.0"
keywords = ["ROS2", "Codestral", "AI", "Code Generation"]
description = "Generate ROS2 elements (nodes, interfaces, etc) with Codestral AI model"
authors = [
    { name="Alex Aleev", email="lexmaister@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mistralai",
    "pytest",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/lexmaister/codestral_ros2_gen"
"Bug Tracker" = "https://github.com/lexmaister/codestral_ros2_gen/issues"

[tool.setuptools]
packages = ["codestral_ros2_gen"]

[tool.setuptools.package-data]
"codestral_ros2_gen" = ["*.md", "*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]