<?xml version="1.0"?>
<package format="3">
  <name>network_scanner</name>
  <version>0.1.0</version>
  <description>Example package for a network scanner node that publishes network status.</description>
  <maintainer email="lexmaister@gmail.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ament_cmake_pytest</depend>
  <depend>rosidl_default_generators</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
